Fix navigation overflow bug

--- a/assets/css/header/header.css
+++ b/assets/css/header/header.css
@@ -13,7 +13,6 @@
   display: flex;
 
   overflow-x: auto;
-  justify-content: safe center;
 }
 
 .page-navigation::-webkit-scrollbar {
@@ -22,6 +21,8 @@
 
 .nav-list {
   display: flex;
+  padding: 0 12px;
+  margin: auto;
 }
 
 .nav-item + .nav-item {
@@ -35,7 +36,7 @@
   font-size: 1rem;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 576px) {
   .page-logo {
     --size: 3rem;
 
